--- a/public/sass/pages/_laser.scss
+++ b/public/sass/pages/_laser.scss
@@ -61,6 +61,7 @@
         .custom-presets-wrapper {
             background: #FFF;
             padding: 0 20px;
+            overflow: scroll;
             width: 440px;
 
             .custom-presets-list {
